-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------

February 11 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Rather a large doc update
  * One typo fix

January 14 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Small bug corrected in the stamina regeneration
  * One typo fix

December 15 2004 Heikki Sairanen <first.last@tut.fi>

  * "magpie critically peck you" corrected

December 14 2004 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * History-related doc updates, especially in the Doc/Obsolete directory