@@ -7,6 +7,14 @@
 
 -----------------------------------------------------------------------------
 
+February 28 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
+
+  * kamikaze dwarfs sing hymns
+  * limbs cut off by leprosy go to the inventory not to the ground
+  * Carnivorous plants can now (probably) eat.
+  * some wands are teleported to kamikaze dwarfs in the cathedral (if they are 
+	kamikaze weapons)
+	
 February 11 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
   * Rather a large doc update
